src/objects/Client_Tag_Assignment__c.object
<CustomObject>
    <description>Links a Client Tag to a Client</description>
    <fields>
        <fullName>ClientAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Account</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You must choose an Account with Account Status = Client.</errorMessage>
            <filterItems>
                <field>Account.Account_Type__c</field>
                <operation>equals</operation>
                <value>Client</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Client Tags (from Contract)</relationshipLabel>
        <relationshipName>Client_Tag_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ClientTag__c</fullName>
        <label>Client Tag</label>
        <referenceTo>Client_Tag__c</referenceTo>
        <relationshipLabel>Client Accounts</relationshipLabel>
        <relationshipName>Client_Tag_Assignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <description>The Contract record that is related to the Client Tag</description>
        <inlineHelpText>The Contract record that is related to the Client Tag</inlineHelpText>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Client Tags</relationshipLabel>
        <relationshipName>Client_Tag_Assignments</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Client Tag Assignment</label>
    <nameField>
        <displayFormat>CT-{000000}</displayFormat>
        <label>Client Tag Assignment Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Tag Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>